--- a/app/views/posts/index.html.haml
+++ b/app/views/posts/index.html.haml
@@ -66,7 +66,7 @@
       %div.panel.panel-info
         %div.panel-heading
           %b
-            %a{:href=>"/posts/3",:class=>"title"}#{p.title.truncate(30).capitalize}
+            %a{:href=>"/posts/#{p.id}",:class=>"title"}#{p.title.truncate(30).capitalize}
           -if current_user.id == p.user_id.to_i 
             %a.delete_post{'data-id'=>"#{p.id}"} X
         - if p.avatar.present?
