--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -2,10 +2,10 @@
   .card{
     box-shadow: 0 10px 8px 0 rgba(0,0,0,0.2);
     background:#aaaae733;
-    width: 50%;
+    width: 75%;
     height: auto;
-    margin-left: 325px;
-    margin-top:  50px;
+    margin-left: 172px;
+    margin-top:  25px;
     position: fixed;
   }
   .card:hover {
@@ -31,7 +31,7 @@
       <div class="field">
         <%= f.label :Description %>
         <br/>
-        <%= f.text_area :description,:class=>"form-control" %>
+        <%= f.text_area :description,:class=>"form-control",:style=>"height:155px;max-width: 943px;max-height:250px;" %>
       </div>
       <br/>
       <div class="field">
