--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,16 +1,45 @@
-<h2>Forgot your password?</h2>
+<style type="text/css">
+  .card{
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+    background:#aaaae733;
+    width: 40%;
+    height: 268px;
+    margin-left: 400px;
+    margin-top:  100px;
+  }
+  .card:hover {
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+  }
+.card-body{
+  padding: 2px 16px;
+}
+a:hover{
+    text-decoration: none;
+  }
+  a{
+    color: #000;
+  }
+</style>
+<div class="card" style="overflow-x: hidden;overflow-y: hidden;">
+  <center><h2><strong><h2>Forgot your password?</h2></strong></h2></center>
+  <div class="card-body">
+    <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
+      <%= devise_error_messages! %>
 
-<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
-  <%= devise_error_messages! %>
+      <div class="field" style="padding: 10px;">
+        <%= f.email_field :email, autofocus: true, autocomplete: "email",:required=>true,:class=>"form-control",:placeholder=>"Email" %>
+      </div>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+      <div class="actions" style="padding:10px;">
+        <%= f.submit "Send me reset password instructions",:class=>"btn btn-success" %>
+      </div>
+    <% end %>
+    <div class="field" style="padding: 10px;">
+      <a href="/users/sign_in" ></span>Log in</a></span><br>
+      <a href="/users/auth/google_oauth2"></span>Sign in with Google</a></span><br>
+
+    </div>
   </div>
+</div>
 
-  <div class="actions">
-    <%= f.submit "Send me reset password instructions" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
