--- a/app/views/posts/index.html.haml
+++ b/app/views/posts/index.html.haml
@@ -46,11 +46,6 @@
     animation: shake 0.3s;
     animation-iteration-count: 2s;
   }
-  .alert
-  {
-    margin-right: 32px;
-    z-index=99999999;
-  }
   @keyframes shake {
     0% { transform: translate(1px, 1px) rotate(0deg); }
     10% { transform: translate(-1px, -2px) rotate(-1deg); }
@@ -105,10 +100,35 @@
                 %b Posted 
                 #{time_ago_in_words(p.created_at)} ago
 
+- else
+  - @posts.each do |p|
+    %div{:id => "#{p.id}",:style=>"overflow-x:99999999;"}
+      %div.card
+        %div.panel.panel-info
+          %div.panel-heading
+            %b
+              %a.post_title{:href=>"/posts/#{p.id}",:class=>"title"}#{p.title.truncate(30).capitalize}
+          - if p.avatar.present?
+            %div.panel-body.fl
+              %img.img_size{:src=>p.avatar}
+          %div.panel-body
+            %b=p.description.truncate(1500)
+          .row
+            .col-md-4 
+              %div.panel-body 
+                %b Comments: 
+                #{p.comments.where("is_archive =? ",false).count}     
+            .col-md-4
+              %div.panel-body
+                %b Posted by :
+                #{p.user.email}
+            .col-md-4  
+              %div.panel-body
+                %b Posted 
+                #{time_ago_in_words(p.created_at)} ago
+
 
 :javascript
-
-  $(".alert.alert-info").fadeOut(5000);
   $(".delete_post").click(function() 
     {
       swal({
