--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -62,7 +62,7 @@
   </nav>
 <% end %>
 <% if notice %>
-  <div class="alert alert-dismissible alert-info">
+  <div class="alert alert-dismissible alert-info" style="margin: 31px;">
     <button type="button" class="close" data-dismiss="alert">&times;</button>
     <strong><%= notice %></strong>
   </div>
