--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -36,7 +36,7 @@
       <br/>
       <div class="field">
         <%= f.label :'Upload Photo' %>
-        <%= f.file_field :avatar  %>
+        <%= f.file_field :avatar ,:multiple=>true %>
       </div>
       <br/>
       <div class="actions">
