--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -33,11 +33,11 @@
         <br/>
         <%= f.text_area :description,:class=>"form-control",:style=>"height:155px;max-width: 943px;max-height:250px;" %>
       </div>
-      <br/>
+     <!--  <br/>
       <div class="field">
         <%= f.label :'Upload Photo' %>
         <%= f.file_field :avatar ,:multiple=>true %>
-      </div>
+      </div> -->
       <br/>
       <div class="actions">
         <%= button_tag "Create",:class =>"btn btn-success" %>
