--- a/app/views/posts/show.html.haml
+++ b/app/views/posts/show.html.haml
@@ -71,8 +71,8 @@
         =button_tag("Update Description",:class =>"btn btn-success",:id => "update_desc")
         =button_tag("Cancel",:class =>"btn btn-danger",:id => "cancel_desc")
   %br
-    -if @post.avatar.present? 
-      = image_tag @post.avatar.url(:thumb)
+    / -if @post.avatar.present? 
+    /   = image_tag @post.avatar.url(:thumb)
 %br
 .card
   %div.panel.panel-primary 
@@ -86,8 +86,8 @@
         -if current_user.id == c.user_id
           - if c.comment.present?
             =text_field_tag 'comment' , "#{c.comment}" ,"data-value" => "#{c.comment}" ,readonly: 'readonly',:class=>"form-control", :id => "com_#{c.id}"
-          -if c.avatar.present?
-            %img.img_size{:src=>c.avatar,:style=>"max-width:500px;max-height:500px;"}
+          / -if c.avatar.present?
+          /   %img.img_size{:src=>c.avatar,:style=>"max-width:500px;max-height:500px;"}
           %br
           %br
           =button_tag("Edit",:class =>"edit_com_#{c.id}",:onclick => "edit_com(#{c.id})")
@@ -99,9 +99,9 @@
 
           - if current_user.id == @post.user_id.to_i
             =button_tag("Delete",:class => "delete_com_#{c.id}",:id => "#{c.id}",:onclick => "delete_com(#{c.id})")
-          -if c.avatar.present?
-            %img.img_size{:src=>c.avatar}
-            %br
+          / -if c.avatar.present?
+          /   %img.img_size{:src=>c.avatar}
+          /   %br
   -else
     %div.panel-body No comments till now...
   %br
@@ -110,7 +110,7 @@
     .field{:style=>"margin-left:14px;"}
       = hidden_field_tag :post_id, @post.id
       = f.text_field :comment,:class=>"form-control"
-      = f.file_field :avatar, :id => "display_upload",:class => "uploadfile"
+      / = f.file_field :avatar, :id => "display_upload",:class => "uploadfile"
       &nbsp; 
       %a.glyphicon.glyphicon-paperclip#upload{:style=>"cursor:pointer;"}
       &nbsp; 
