--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -33,11 +33,14 @@
         <br/>
         <%= f.text_area :description,:class=>"form-control",:style=>"height:155px;max-width: 943px;max-height:250px;" %>
       </div>
-     <!--  <br/>
-      <div class="field">
-        <%= f.label :'Upload Photo' %>
-        <%= f.file_field :avatar ,:multiple=>true %>
-      </div> -->
+      <br/>
+      <%= f.fields_for @post_pictures do |picture| %>
+        <div>
+          <%= picture.label :'Upload Photo' %>
+          <%= picture.file_field :image ,:multiple=>true %>
+        </div>
+      <% end %>
+
       <br/>
       <div class="actions">
         <%= button_tag "Create",:class =>"btn btn-success" %>
