--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -4,9 +4,10 @@
     background:#aaaae733;
     width: 75%;
     height: auto;
-    margin-left: 172px;
-    margin-top:  25px;
-    position: fixed;
+    left: 172px;
+    top:  100px;
+    position: relative;
+    overflow-x:hidden; 
   }
   .card:hover {
     box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
