--- a/app/views/posts/show.html.haml
+++ b/app/views/posts/show.html.haml
@@ -1,14 +1,14 @@
 :css
   .main{
-    position: relative;
+    position: absolute;
   }
   .inner1
   {
-    padding-right: 280px;
+    margin-right: 280px;
   }
   .inner3
   {
-    padding-right: 280px;
+    margin-right: 280px;
   }
   .inner2
   {
